Reject more unordered sets (e.g., Set.of() provides no ordering guarantees)